--- a/pom.xml
+++ b/pom.xml
@@ -250,6 +250,18 @@
 		  <artifactId>jsoup</artifactId>
 		  <version>1.14.3</version>
 		</dependency>
+		<!-- Web socket -->
+		<dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+            <version>${org.springframework-version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
