--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,12 @@
 			<artifactId>javax.websocket-api</artifactId>
 			<version>1.1</version>
 		</dependency>
+		<!-- 문자발송api -->
+		<dependency>
+		    <groupId>net.nurigo</groupId>
+		    <artifactId>javaSDK</artifactId>
+		    <version>2.2</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
